Fix horizontal alignment of symlinks and zip-files

--- a/styles/file-icons.less
+++ b/styles/file-icons.less
@@ -10,7 +10,9 @@
 .icon-file-text,
 .icon-file-directory,
 .icon-file-media,
+.icon-file-zip,
 .icon-book,
+.icon-file-symlink-file,
 .icon-file-pdf {
   &:before { text-align: center; }
 }
